--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,7 @@ const page = {
           <li>Home Decluttering</li>
           <li>Practical Organising</li>
           <li>Downsizing Support</li>
+          <li>Homeshare and Co-living</li>
           <li>Moving Preparation</li>
           <li>Efficient Styling</li>
         </ul>
